[package]
name = "launchpad"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "launchpad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]


[dependencies]
anchor-lang = {version = "0.26.0", features = ["init-if-needed"]}
anchor-spl = "0.26.0"
spl-token = "3.2.0"